
2004/05/14: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ipc/ipc.{c,h}: fixed some bugs


2004/05/13: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ipc/ipc.{c,h}: 
  - added functions GWEN_IPCManager_SetUpFn and
    GWEN_IPCManager_SetDownFn to allow keeping track of connection states
  - added function GWEN_IPCManager_Disconnect to actively disconnect a given
    client/server


2004/05/10: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- ipc/*.h: prepared for use by C++ code
- ipc/ipc: minor additions


2004/05/09: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- completed IPC stuff (still untested), added documentation to ipc/ipc.h


2004/05/08: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added module ipc/ipc. This is a very simple IPC model based on
  GWEN_DBs send over HTTP (which in turn may be sent over any supported
  transport layer, such as TCP/UDP sockets and SSL).
  This allows for maximum flexibility while maintaining a very simple API.
  Even with this simple API you can implement any security depth you like:
  - unencrypted using HTTP over UDP sockets
  - unencrypted using HTTP via TCP sockets
  - encrypted using HTTP via SSL
  - encrypted using HTTP via SSL while checking certificates
- SSL server code works !!! ;-)


2004/05/07: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- parser/db: added function GWEN_DB_VariableName (I couldn't believe that
  this function did not exist ;-)
- started working on IPC stuff again, this time based on HTTPS, therefore
  added ipc/netconnectionhttp (implements the HTTP protocol, together with
  the transport layer NetTransportSSL we have HTTPS ;-)
- io/bio_buffer: added constructor which does NOT take over ownership


2004-05-07   Christian Stimming <stimming@tuhh.de>
