@@ -365,7 +365,8 @@ GWEN_NetTransportSSL_Read(GWEN_NETTRANSPORT *tr,
     }
   }
 
-  DBG_DEBUG(0, "Read %d bytes", rv);
+  DBG_NOTICE(0, "Read %d bytes:", rv);
+  GWEN_Text_DumpString(buffer, rv, stderr, 2);
   *bsize=rv;
   GWEN_NetTransport_MarkActivity(tr);
   return GWEN_NetTransportResultOk;
@@ -427,7 +428,8 @@ GWEN_NetTransportSSL_Write(GWEN_NETTRANSPORT *tr,
     return GWEN_NetTransportResultError;
   }
 
-  DBG_DEBUG(0, "Written %d bytes", rv);
+  DBG_NOTICE(0, "Written %d bytes:", rv);
+  GWEN_Text_DumpString(buffer, rv, stderr, 2);
   *bsize=rv;
   GWEN_NetTransport_MarkActivity(tr);
   return GWEN_NetTransportResultOk;
